# observe-llm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
Formula/: claude-guardian.rb
src/: main.rs  masker.rs  storage.rs
src/hook_server/: server.rs
src/system/: boot.rs  tray.rs
src/web_server/: handlers.rs  server.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx
