[package]
name = "llm-observer"
version = "0.1.0"
edition = "2021"
description = "Local observer daemon for Claude Code hooks"
license = "MIT"

[[bin]]
name = "llm-observer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
include_dir = "0.7"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.14"
winit = "0.30"
resvg = "0.44"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
